working it out on the remix

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         <section id="about">
             <h2>About Me</h2>
             <div style = "text-align: center;">
-                <img src="{{ url_for('static', filename='images/Madison_Headshot.JPG') }}" alt="Madison Swain" style="max-width: 200px; height: auto; border-radius: 50%;">
+                <img src="static/images/Madison_Headshot.JPG" alt="Madison Swain" style="max-width: 200px; height: auto; border-radius: 50%;">
                 <p>A third-year student at the University of North Carolina at Chapel Hill, double majoring in Advertising and Public Relations at the Hussman School of Journalism and Media and Information Science, with a Certificate in Business Communication.</p>
-                <a href="{{ url_for('static', filename='resumes/Madison_Swain_Resume.pdf') }}" target="_blank">View my Resume (PDF)</a>
+                <a href="static/resumes/Madison_Swain_Resume.pdf" target="_blank">View my Resume (PDF)</a>
             </div>
         </section>
 
